--- a/cic-operator/deploy/olm-catalog/cic-operator/cic-operator.package.yaml
+++ b/cic-operator/deploy/olm-catalog/cic-operator/cic-operator.package.yaml
@@ -1,5 +1,5 @@
 channels:
-- currentCSV: cic-operator.v1.7.6
+- currentCSV: cic-operator.v0.0.1
   name: alpha
 defaultChannel: alpha
-packageName: cic-operator
+packageName: cic-operator-with-crds
