--- a/cic-operator/helm-charts/citrix-k8s-ingress-controller/Chart.yaml
+++ b/cic-operator/helm-charts/citrix-k8s-ingress-controller/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: 1.7.6
-description: A Helm chart for Citrix Ingress Controller configuring MPX/VPX
+description: A Helm chart for Citrix API Gateway
 home: https://www.citrix.com
 icon: https://raw.githubusercontent.com/citrix/citrix-helm-charts/gh-pages/icon.png
 maintainers:
